# CPPlabs

./: .gitignore  README.md
lab1/: CMakeLists.txt
lab1/src/: FlatMap.cpp  FlatMap.h  main.cpp
lab1/test/: flatmap_test.cpp
lab2/: CMakeLists.txt  README.md  TODO.md
lab2/src/: Converter.cpp  Converter.hpp  DATA.cpp  DATA.hpp  SoundProcessor.cpp  SoundProcessor.hpp  WAV.cpp  WAV.hpp  consoleColor.cpp  consoleColor.hpp  main.cpp
lab3/: CmakeLists.txt  README.md
lab3/include/: general_funcs.h
lab3/src/: Game.cpp  Game.h  GameContext.cpp  GameContext.h  GameObject.cpp  GameObject.h  Leaderboard.cpp  Leaderboard.h  general_funcs.cpp  general_funcs.h  main.cpp
lab4/: CMakeLists.txt  README.md
lab4/includes/: FlatMap.h  csv.h  tuple.h
lab4/src/: FlatMap.cpp  csv.cpp  tuple.cpp
